--- a/SEN_Project_v1/SEN_Project_v1.csproj
+++ b/SEN_Project_v1/SEN_Project_v1.csproj
@@ -56,6 +56,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingContorl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingContorl.Designer.cs">
+      <DependentUpon>SettingContorl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserProfile.cs" />
     <Compile Include="VideoChatting.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SettingContorl.resx">
+      <DependentUpon>SettingContorl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VideoChatting.resx">
       <DependentUpon>VideoChatting.cs</DependentUpon>
     </EmbeddedResource>
