--- a/SEN_Project_v1/SEN_Project_v1.csproj
+++ b/SEN_Project_v1/SEN_Project_v1.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AForge.Video">
+      <HintPath>..\..\..\..\..\Downloads\webcamClientServer\streamingvideoserver\RobotWebCamServer\RobotWebCamServer\dlls\AForge.Video.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Video.DirectShow">
+      <HintPath>..\..\..\..\..\Downloads\webcamClientServer\streamingvideoserver\RobotWebCamServer\RobotWebCamServer\dlls\AForge.Video.DirectShow.dll</HintPath>
+    </Reference>
     <Reference Include="DevComponents.DotNetBar.Design">
       <HintPath>..\..\..\..\..\Downloads\Compressed\DotNetBar\DevComponents.DotNetBar.Design.dll</HintPath>
     </Reference>
@@ -44,6 +50,20 @@
     <Reference Include="DevComponents.Instrumentation.Design">
       <HintPath>..\..\..\..\..\Downloads\Compressed\DotNetBar\DevComponents.Instrumentation.Design.dll</HintPath>
     </Reference>
+    <Reference Include="MSR.LST.Net.Rtp, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MSR.LST.Net.Rtp.dll</HintPath>
+    </Reference>
+    <Reference Include="NetworkingBasics, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\NetworkingBasics.dll</HintPath>
+    </Reference>
+    <Reference Include="Noesis.Drawing.Imaging.WebP">
+      <HintPath>..\..\..\..\..\Downloads\WebPForDotNet-v0.3-BinariesForDotNET3.5\WebPForDotNet-v0.3-Binaries\Noesis.Drawing.Imaging.WebP.dll</HintPath>
+    </Reference>
+    <Reference Include="ownLibrary">
+      <HintPath>..\..\ownLibrary\ownLibrary\bin\Debug\ownLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Messaging" />
@@ -54,10 +74,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebCam_Capture, Version=1.0.2292.23514, Culture=neutral">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\WebCam_Capture.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
@@ -69,6 +85,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RTPHelper.cs" />
     <Compile Include="SettingContorl.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,7 +99,7 @@
     <Compile Include="VideoChatting.Designer.cs">
       <DependentUpon>VideoChatting.cs</DependentUpon>
     </Compile>
-    <Compile Include="Webcam.cs" />
+    <None Include="Webcam.cs.bak" />
     <EmbeddedResource Include="MainIP.resx">
       <DependentUpon>MainIP.cs</DependentUpon>
     </EmbeddedResource>
